--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "RandD-Checkout",
   "version": "0.1.0",
   "author": "idevAssembly",
+  "scripts": {
+    "test": "grunt test"
+  },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
