--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js:
   - "0.10"
 before_script:
   - npm install grunt-cli -g
-  - npm install grunt-postcss autoprefixer-core -g
+  - npm install grunt-postcss autoprefixer -g
