--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ node_js:
   - "0.10"
 before_script:
   - npm install grunt-cli -g
-  - npm install grunt-postcss autoprefixer -g
+  - npm install autoprefixer --save-dev
+  - npm install grunt-postcss --save-dev
