--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ before_script:
   - npm install grunt-cli -g
   - npm install autoprefixer --save-dev
   - npm install grunt-postcss --save-dev
+  - npm install es6-promise --save-dev
